plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6' apply(false)
    id 'io.spring.dependency-management' version '1.1.0' apply(false)
}

allprojects {
    apply plugin: 'java'

    group = 'com.code-koi'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        // https://mvnrepository.com/artifact/com.google.guava/guava
        implementation 'com.google.guava:guava:31.1-jre'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'

        //lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
